[project]
name = "comfyui-tj_node"
description = "Large Scale Wireless Workflow Architecture Toolkit for ComfyUI — wireless routing, batch/preview/save pipelines, LLM prompt workflow, LoRA analysis, and Krea2 TQD dataset scoring."
version = "2.9.2"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "llama-cpp-python",
]

[project.urls]
Repository = "https://github.com/designloves2/ComfyUI-TJ_NODE"

[tool.comfy]
PublisherId = "designloves2"
DisplayName = "ComfyUI-TJ_NODE"
Icon = ""
